--- a/src/scss/current_project/index.scss
+++ b/src/scss/current_project/index.scss
@@ -5,7 +5,7 @@ $mont: 'Montserrat', sans-serif;
 * {
 	z-index: 1;
 }
-html, body {
+html {
 	    font-family: $mont;
 			overflow-x: hidden;
 			width: 100vw;
