added phones and we did

--- a/src/scss/current_project/_colors.scss
+++ b/src/scss/current_project/_colors.scss
@@ -1,3 +1,4 @@
 $transparent: rgba(255, 255, 255, 0);
 $gray: rgba(192, 192, 192, 1);
 $d_gray: rgba(82, 82, 82, 1);
+$almost_black: rgba(28, 28, 28, 1);
