--- a/src/scss/current_project/_fonts.scss
+++ b/src/scss/current_project/_fonts.scss
@@ -12,3 +12,8 @@
     src: url("../fonts/Montserrat-SemiBold.ttf");
     font-weight: 600;
    }
+@font-face {
+   font-family: "Montserrat";
+   src: url("../fonts/Montserrat-Bold.ttf");
+   font-weight: 700;
+  }
