--- a/src/scss/current_project/index.scss
+++ b/src/scss/current_project/index.scss
@@ -37,12 +37,38 @@ html {
 				resize: none;
 			}
 			h2 {
-        @include SetFontLineSize(0.35, 0.35, 0.3, 158, 0);
+        @include SetFontLineSize(0.5, 0.5, 0.0, 158, 0);
+				background: -webkit-linear-gradient(-86deg, #EEF85B 5%, #7AEC8D 53%, #09E5C3 91%);//overrides in other files
+			  -webkit-background-clip: text;
+			  -webkit-text-stroke: 4px transparent;
+			  color: black;
+				font-weight: 700;
+				text-transform: uppercase;
 			}
-      h3 {
-        @include SetFontLineSize(0.2, 0.2, 0.6, 22, 8);
+			h3 {
+        @include SetFontLineSize(0.25, 0.25, 0.5, 56, 8);
+      }
+      h4 {
+        @include SetFontLineSize(0.25, 0.25, 0.5, 24, 12);
       }
 }
 
+.slider-buttons {
+	display: flex;
+	justify-content: center;
+	.s-button {
+		width: 10px;
+		height: 10px;
+		border-radius: 5px;
+		border: 2px solid white;
+		margin: 0 3px;
+	}
+	.selected {
+		background: white;
+		width: 31px;
+	}
+}
 
 @import "includes/teaser.scss";
+@import "includes/phones.scss";
+@import "includes/social.scss";
