--- a/src/scss/current_project/index.scss
+++ b/src/scss/current_project/index.scss
@@ -72,3 +72,6 @@ html {
 @import "includes/teaser.scss";
 @import "includes/phones.scss";
 @import "includes/social.scss";
+@import "includes/photos.scss";
+@import "includes/behind.scss";
+@import "includes/videos.scss";
