--- a/src/scss/current_project/includes/photos.scss
+++ b/src/scss/current_project/includes/photos.scss
@@ -14,7 +14,7 @@
   .photo-item {
     @include SetWidth-responsive(1300);
     img {
-      //border: 4px solid black;
+      border: 4px solid black;
     }
   }
   .w39 {
