--- a/src/scss/current_project/includes/videos.scss
+++ b/src/scss/current_project/includes/videos.scss
@@ -23,6 +23,9 @@
         @include SetFontLineSize(0.25, 0.25, 0.5, 44, 24);
       }
     }
+    .owl-carousel, #videos-dots {
+      display: none;
+    }
     .videos-array {
       margin-top: RelativeUnits(200, 1.0, desktop-middle, horizontal);
 
@@ -48,6 +51,12 @@
     }
     .container {
       width: 100vw;
+      .owl-carousel, #videos-dots {
+        display: flex;
+      }
+      .videos-desktop {
+        display: none;
+      }
       .text-wrap {
         width: 90vw;
         margin: 0 auto;
@@ -59,7 +68,6 @@
       }
       .videos-array {
         flex-wrap: wrap;
-        // // TODO:
         .video-duplet {
           width: 90vw;
           margin: 0 auto;
