--- a/src/scss/current_project/index.scss
+++ b/src/scss/current_project/index.scss
@@ -1,6 +1,8 @@
 @import "_colors.scss";
 @import "_fonts.scss";
 
+@import 'node_modules/owl.carousel/src/scss/owl.carousel.scss';
+
 $mont: 'Montserrat', sans-serif;
 * {
 	z-index: 1;
@@ -44,6 +46,7 @@ html {
 			  color: black;
 				font-weight: 700;
 				text-transform: uppercase;
+				padding-left: 6px;
 			}
 			h3 {
         @include SetFontLineSize(0.25, 0.25, 0.5, 56, 8);
@@ -63,7 +66,7 @@ html {
 		border: 2px solid white;
 		margin: 0 3px;
 	}
-	.selected {
+	.selected, .active {
 		background: white;
 		width: 31px;
 	}
