added bydlocode from ancestors

--- a/src/scss/current_project/index.scss
+++ b/src/scss/current_project/index.scss
@@ -78,3 +78,7 @@ html {
 @import "includes/photos.scss";
 @import "includes/behind.scss";
 @import "includes/videos.scss";
+///HEADER, FOOTER, SPARE FOR ALL
+@import "includes/base.scss";
+@import "includes/head.scss";
+@import "includes/foot-new.scss";
