--- a/src/scss/current_project/index.scss
+++ b/src/scss/current_project/index.scss
@@ -82,6 +82,4 @@ html {
 @import "includes/behind.scss";
 @import "includes/videos.scss";
 ///HEADER, FOOTER, SPARE FOR ALL
-@import "includes/base.scss";
-//@import "includes/head.scss";
-//@import "includes/foot-new.scss";
+//@import "includes/base.scss";
