--- a/src/scss/current_project/includes/teaser.scss
+++ b/src/scss/current_project/includes/teaser.scss
@@ -109,7 +109,7 @@
       -webkit-background-clip: text;
       -webkit-text-stroke: RelativeUnits(6, 0.5, desktop-middle, horizontal) transparent;
       color: black;
-      margin-top: RelativeUnits(-60, 0.9, desktop-middle, horizontal);
+      //margin-top: RelativeUnits(-60, 0.9, desktop-middle, horizontal);
     }
     #teaser-dots {
       display: none;
