--- a/src/scss/current_project/index.scss
+++ b/src/scss/current_project/index.scss
@@ -37,12 +37,7 @@ html {
 			h3:not(.tit) {
 				color: white;
 			}
-			.tab-nav, .part-add {
-				a {
-					font-size: 18px !important;
-					line-height: 22px !important;
-				}
-			}
+
       p, li, a, input, textarea {
         @include SetFontLineSize(0.1, 0.1, 0.8, 14, 10);
       }
@@ -66,6 +61,13 @@ html {
       h4 {
         @include SetFontLineSize(0.25, 0.25, 0.5, 24, 12);
       }
+}
+
+.tab-nav, .part-add {
+	a {
+		font-size: 18px;
+		line-height: 22px;
+	}
 }
 
 .about{ .logo { img{ width: auto; }}}
